test/oscar/compiler/errors/actorEquality.oscar
message testNow()


actor Tester() {

  receive = {
    | testNow() => {
        Println("Error");
      }
    | die() => {
      }
  }
}

def main() => unit = {
  actor<Tester> tester1 = spawn actor<Tester>();
  actor<Tester> tester2 = spawn actor<Tester>();
  bool b = (tester1 == tester2);
  message<testNow>() |> tester1;
  message<die>() |> tester1;
  message<die>() |> tester2;
}
